# DGS-JS

./: .gitignore  .gitmodules  README.md  build.js  package-lock.json  package.json  vite.config.js
src/: camera.js  context.js  index.js  prefix_sum_kernel.js  radix_sort_kernel.js  renderer.js  sort_worker.js  sorter.js
src/renderer/: context.js  radix_sort_kernel.js
src/renderer/shaders/: gaussian_preprocess.wgsl  gaussian_rasterize.wgsl  prefix_sum.wgsl
src/shaders/: composite.wgsl  gaussian.wgsl  gaussian_preprocess.wgsl  gaussian_rasterize.wgsl  prefix_sum.wgsl  radix_sort_block_sum.wgsl  radix_sort_reorder.wgsl
src/wasm/: CMakeLists.txt  ext.cpp  patch_nextjs.py
src/wasm/MGS/: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
src/wasm/MGS/csrc/: ext.cpp
src/wasm/MGS/csrc/include/: mgs_decode.h  mgs_encode.h  mgs_error.h  mgs_format.h  mgs_gaussians.h  mgs_global.h  mgs_log.h
src/wasm/MGS/csrc/src/: mgs_decode.c  mgs_encode.c  mgs_error.c  mgs_gaussians.c
src/wasm/MGS/mgs/: __init__.py
src/wasm/include/: mgs_gaussian.hpp  mgs_ply.hpp  mgs_sorter.hpp
src/wasm/src/: mgs_emscripten_bindings.cpp  mgs_gaussian.cpp  mgs_ply.cpp  mgs_sorter.cpp
src/workers/: sort.js
test/: example.dgs  index.html
